--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -6,12 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#1D1D1D"
     tools:context=".ChatBot">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/botRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:backgroundTint="@color/white"
         android:layout_weight="1"/>
     
     <LinearLayout
@@ -24,12 +26,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:hint="Send a message"/>
 
         <ImageView
             android:id="@+id/microphone"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:backgroundTint="@color/white"
             android:src="@drawable/mic"/>
 
         <ImageButton
