--- a/app/src/main/res/drawable/bot_message.xml
+++ b/app/src/main/res/drawable/bot_message.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#F1F1F1"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#19C27D"/>
+    <corners android:topRightRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:bottomLeftRadius="20dp"/>
 </shape>
