--- a/app/src/main/res/drawable/sendbtn.xml
+++ b/app/src/main/res/drawable/sendbtn.xml
@@ -1,5 +1,22 @@
-<vector android:autoMirrored="true" android:height="24dp"
-    android:tint="#3B3B45" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#19C27D"/>
+            <corners android:radius="6dp"/>
+        </shape>
+    </item>
+    <item>
+        <vector android:autoMirrored="true"
+            android:height="38dp"
+            android:width="38dp"
+            android:viewportWidth="24"
+            android:viewportHeight="24"
+            android:tint="#3B3B45">
+            <path
+                android:fillColor="@android:color/white"
+                android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+        </vector>
+    </item>
+</layer-list>
