--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -1,48 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#1D1D1D"
+    android:background="#343541"
+    android:padding="10dp"
     tools:context=".ChatBot">
+
+    <TextView
+        android:id="@+id/textOpenAI"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Powered by OpenAI"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:background="@drawable/enter_section"
+        android:padding="5dp"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/botRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:backgroundTint="@color/white"
-        android:layout_weight="1"/>
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textOpenAI" />
 
-        <EditText
-            android:id="@+id/askbotEditText"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bottomLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:minHeight="50dp"
+        android:maxHeight="120dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/enter_section"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:hint="Send a message"/>
+            android:minHeight="50dp"
+            android:maxHeight="120dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:paddingTop="15dp"
+            app:layout_constraintTop_toTopOf="@id/bottomLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/microphone"
+            app:layout_constraintBottom_toBottomOf="@id/bottomLayout">
 
-        <ImageView
-            android:id="@+id/microphone"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:backgroundTint="@color/white"
-            android:src="@drawable/mic"/>
+            <EditText
+                android:id="@+id/askbotEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/enter_section"
+                android:hint="Send a message..."
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="19sp"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical"
+                android:gravity="start|top"
+                android:isScrollContainer="true"/>
 
-        <ImageButton
-            android:id="@+id/sendbtn"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:src="@drawable/sendbtn"/>
+        </androidx.core.widget.NestedScrollView>
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/microphone"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/mic"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:paddingEnd="5dp"
+                app:layout_constraintEnd_toStartOf="@id/sendbtn"
+                app:layout_constraintBottom_toBottomOf="@id/sendbtn"
+                app:layout_constraintTop_toTopOf="@id/sendbtn"/>
 
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/sendbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/sendbtn"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
