--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,171 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1D1D1D"
-    android:orientation="vertical"
-    tools:context=".SignUp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    android:padding="15dp"
+    android:background="#343541">
 
         <TextView
+            android:id="@+id/textWelcomeBack"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textSize="35sp"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:layout_margin="45dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="210dp"
             android:fontFamily="sans-serif-black"
-            android:text="Welcome\nBack!"/>
+            android:text="Welcome\nBack!"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <LinearLayout
-            android:layout_width="370dp"
-            android:layout_height="50dp"
-            android:background="@drawable/enter_section"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Email or Username"
-                app:startIconDrawable="@drawable/user"
-                app:startIconTint="#626262"
-                android:textColorHint="@color/white">
-                <EditText
-                    android:id="@+id/email_or_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/enter_section"
-                    android:inputType="textEmailAddress"
-                    android:textSize="17sp"
-                    android:textColor="@color/white"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="370dp"
-            android:layout_height="50dp"
-            android:background="@drawable/enter_section"
-            android:layout_marginTop="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Enter Password"
-                android:textColorHint="@color/white"
-                app:startIconTint="#626262"
-                app:endIconMode="password_toggle"
-                app:endIconTint="@color/white"
-                app:startIconDrawable="@drawable/mail">
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
-                    android:textSize="17sp"
-                    android:background="@drawable/enter_section"
-                    android:inputType="textPassword"
-                    android:textColor="@color/white"/>
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputEmailOrUsername"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:hint="Email or Username"
+            app:startIconDrawable="@drawable/user"
+            app:startIconTint="#626262"
+            app:hintTextColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@id/textWelcomeBack"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="70dp"
-                android:text="Login"
-                android:textStyle="bold"
+            <EditText
+                android:id="@+id/email_or_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textSize="17sp"
                 android:textColor="@color/white"
-                android:textSize="25sp"/>
+                android:background="@drawable/enter_section" />
 
-            <ImageView
-                android:id="@+id/login_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/next_button"
-                android:layout_marginTop="45dp"
-                android:layout_marginStart="215dp"/>
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputPassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter Password"
+            app:hintTextColor="@color/white"
+            android:textColorHint="@color/white"
+            app:startIconTint="#626262"
+            android:layout_marginTop="30dp"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/white"
+            app:startIconDrawable="@drawable/pass_lock"
+            app:layout_constraintTop_toBottomOf="@id/inputEmailOrUsername"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:background="@drawable/enter_section"
+                android:inputType="textPassword"
+                android:textColor="@color/white"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/ForgotPassword"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Forgot password?"
+            android:textColor="#FF4B26"
+            app:layout_constraintTop_toBottomOf="@id/inputPassword"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/textLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintTop_toTopOf="@id/login_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/login_btn"/>
+
+        <ImageView
+            android:id="@+id/login_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/next_button"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@id/inputPassword"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/textLoginWith"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Login with"
             android:textColor="@color/white"
-            android:layout_marginStart="165dp"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/login_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/linearLoginWith"/>
 
         <LinearLayout
+            android:id="@+id/linearLoginWith"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp"
-            android:layout_marginStart="80dp">
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/textLoginWith"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <ImageView
                 android:id="@+id/google_login"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:src="@drawable/google"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginEnd="25dp" />
+
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/apple_id"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="50dp"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/facebook"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="50dp"/>
+                android:layout_height="wrap_content"
+                android:src="@drawable/apple_id"/>
+
         </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="25dp">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
-            android:textStyle="bold"
+            android:id="@+id/textSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Don't have an account?\nSign Up"
             android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="@id/signup_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/signup_btn"
+            app:layout_constraintBottom_toBottomOf="@id/signup_btn"/>
 
-        <ImageView
-            android:id="@+id/signup_btn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="-100dp"
-            android:src="@drawable/next_button" />
-    </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    <ImageView
+        android:id="@+id/signup_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:src="@drawable/next_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textSignUp"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
