updated UI and resolved many issues

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#1D1D1D"
-    tools:context=".ForgotPassword">
+    android:background="#343541"
+    tools:context=".Login_Signup.ForgotPassword">
 
 
     <TextView
@@ -33,6 +33,7 @@
         android:hint="Enter Email"
         android:padding="15dp"
         android:layout_marginTop="25dp"
+        app:hintTextColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
         app:startIconTint="#626262">
 
         <EditText
-            android:id="@+id/email_or_username"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/enter_section"
@@ -52,31 +53,65 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:id="@+id/sendLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text="Send link"
+        android:text="Send link 👉"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.142"
+        app:layout_constraintBottom_toBottomOf="@+id/BtnLayout"
+        app:layout_constraintEnd_toStartOf="@+id/BtnLayout"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.492" />
+        app:layout_constraintTop_toTopOf="@+id/BtnLayout"
+        app:layout_constraintVertical_bias="0.592" />
 
-    <ImageView
-        android:id="@+id/imageView"
+    <FrameLayout
+        android:id="@+id/BtnLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/next_button"
+        android:animateLayoutChanges="true"
+        android:layout_marginStart="170dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputEmailOrUsername"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0" >
 
+        <ImageButton
+            android:id="@+id/btnSendLink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:src="@drawable/next_button"
+            android:background="?attr/selectableItemBackgroundBorderless"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            style="@style/CustomProgressBar"/>
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/textViewLinkSend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset password link has been sent to your\nregistered Email"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/BtnLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textStyle="normal"
+        android:visibility="invisible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
