--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
             android:id="@+id/inputEmailOrUsername"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Email or Username"
+            android:hint="Enter Email"
             app:startIconDrawable="@drawable/user"
             app:startIconTint="#626262"
             app:hintTextColor="@color/white"
@@ -80,8 +80,10 @@
             android:id="@+id/ForgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
             android:text="Forgot password?"
             android:textColor="#FF4B26"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@id/inputPassword"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -93,18 +95,36 @@
             android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="25sp"
-            app:layout_constraintTop_toTopOf="@id/login_btn"
+            app:layout_constraintTop_toTopOf="@id/loginBtnLayout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/login_btn"/>
+            app:layout_constraintBottom_toBottomOf="@id/loginBtnLayout"/>
+
+    <FrameLayout
+        android:id="@+id/loginBtnLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/inputPassword"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/next_button"
-            android:layout_marginTop="50dp"
-            app:layout_constraintTop_toBottomOf="@id/inputPassword"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:visibility="visible"
+            android:src="@drawable/next_button" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:visibility="invisible"
+            style="@style/CustomProgressBar"/>
+
+    </FrameLayout>
 
         <TextView
             android:id="@+id/textLoginWith"
@@ -114,7 +134,7 @@
             android:textColor="@color/white"
             android:textSize="15sp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/login_btn"
+            app:layout_constraintTop_toBottomOf="@id/loginBtnLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/linearLoginWith"/>
