--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -29,8 +29,8 @@
         android:id="@+id/botRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:backgroundTint="@color/white"
         android:padding="5dp"
+        app:stackFromEnd="true"
         app:layout_constraintBottom_toTopOf="@id/bottomLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
