--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1D1D1D"
+    android:background="#343541"
+    android:padding="10dp"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/RelLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Algorithms"
+            android:layout_marginStart="10dp"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:textSize="35sp"/>
+            android:textSize="30sp"
+            android:layout_alignParentStart="true"/>
 
         <Button
             android:id="@+id/logout_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="135dp"
-            android:text="LogOut"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAllCaps="false"
             android:textStyle="bold"
+            android:layout_margin="10dp"
             android:textColor="@color/white"
-            android:backgroundTint="@color/black"/>
-    </LinearLayout>
+            android:background="@drawable/logout_img"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/SearchView"
-        android:layout_width="390dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:queryHint="Search Algorithm..."
-        android:backgroundTint="@color/white"
-        android:background="@drawable/search_view_bg"
-        android:layout_margin="8dp"
-        app:iconifiedByDefault="false"/>
+        android:background="@drawable/bot_message"
+        android:layout_marginTop="10dp"
+        app:iconifiedByDefault="false"
+        app:layout_constraintTop_toBottomOf="@id/RelLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"/>
-</LinearLayout>
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/SearchView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
