--- a/app/src/main/res/layout/messages_item.xml
+++ b/app/src/main/res/layout/messages_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/botmessageLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/bot_message"
         android:layout_marginEnd="90dp"
         android:padding="10dp">
@@ -17,12 +18,13 @@
             android:id="@+id/botmessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Hello how are you"
+            android:textIsSelectable="true"
             android:fontFamily="sans-serif-condensed-medium"
             android:textColor="@color/black"
             android:textSize="18sp"/>
 
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/usermessageLayout"
@@ -37,6 +39,8 @@
             android:id="@+id/usermessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Hello how are you"
+            android:textIsSelectable="true"
             android:fontFamily="sans-serif-condensed-medium"
             android:textColor="@color/white"
             android:textSize="18sp"/>
